frontend/test/should_fail/exec_027.grg
rule r : (Node) {
  modify{
    y : Node;
    return (y);
    exec( (y)=r ); // nothing may be assigned to graph element y
  }
}
